creating the resources servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,10 @@
         </web-resource-collection>
         <auth-constraint></auth-constraint>
     </security-constraint>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>css/*</url-pattern>
+        <url-pattern>img/*</url-pattern>
+        <url-pattern>js/*</url-pattern>
+    </servlet-mapping>
 </web-app>
