--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>jsp File</web-resource-name>
-            <url-pattern>/*.jsp</url-pattern>
+            <url-pattern>*.jsp</url-pattern>
         </web-resource-collection>
         <auth-constraint></auth-constraint>
     </security-constraint>
