--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,8 @@
     </security-constraint>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
-        <url-pattern>css/*</url-pattern>
-        <url-pattern>img/*</url-pattern>
-        <url-pattern>js/*</url-pattern>
+        <url-pattern>/css/*</url-pattern>
+        <url-pattern>/img/*</url-pattern>
+        <url-pattern>/js/*</url-pattern>
     </servlet-mapping>
 </web-app>
